src/snapshots/ascii_renderer__haiku_1_torus__tests__haiku_1_torus_seed42_t0.snap
---
source: src/haiku_1_torus.rs
assertion_line: 328
expression: output
---
|------------------------------------------------------------------------------|
|                                                                              |
|                                                                              |
|                                                                              |
|                                                                              |
|                                                                              |
|                                                                              |
|                                                                              |
|                                                                              |
|                                                                              |
|                                                                              |
|                                       *                                      |
|                                     :***:                                    |
|                                       *                                      |
|                                                                              |
|                                                                              |
|                                                                              |
|                                                                              |
|                                                                              |
|                                                                              |
|                                                                              |
|                                                                              |
|                                                                              |
|------------------------------------------------------------------------------|
